test/errors/fuzzy_match_type.lq
# Test: Fuzzy matching in type errors
# This file intentionally has a typo to test "did you mean?" suggestions
# Expected error: "Variable not in scope: add-natt"
# Expected suggestion: "Did you mean: add-nat?"

import prelude as P

module test::errors::fuzzy_match_type contains
  # Deliberately misspell add-nat as add-natt
  define transparent test-typo as
    function x Natural y Natural returns Natural value
      P::add-natt x y
    end

  define transparent main as compute
    return (test-typo 2 3)
  end
end
